--- a/app/src/portfolio/projects/Projects.css
+++ b/app/src/portfolio/projects/Projects.css
@@ -45,10 +45,9 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 32px;
-    height: 32px;
     border-radius: 4px;
     transition: all 0.2s ease;
+    margin: 0.5vw 0.5vw 0 0;
 }
 
 .card-github-link:hover {
@@ -56,8 +55,8 @@
 }
 
 .card-github-link svg {
-    width: 28px !important;
-    height: 28px !important;
+    width: 35px !important;
+    height: 35px !important;
 }
 
 /* Card description */
